--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,15 @@ body {
     color: #1e1e1e;
 }
 
+::-webkit-scrollbar {
+    display: none;
+  }
+
+html {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 .navbar {
     position: fixed;
     width: 100%;
